--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                   <ul class=" hidden md:flex item-center  justify-center gap-5 font-medium uppercase">
                       <li><a href="#" >Home </a>
                       <hr class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none "></li>
-                      <li><a href="#">All Doctor</a>
+                      <li><a href="./All Doctor.html">All Doctor</a>
                       <hr class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden hover:border"></li>
-                      <li><a href="#">About</a>
+                      <li><a href="./About.html">About</a>
                         <hr  class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden"></li>
-                      <li><a href="#" >Contract</a>
+                      <li><a href="./contract.html" >Contract</a>
                         <hr  class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden"></li>
                   </ul>
                   </nav>
@@ -229,7 +229,10 @@
         <div data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
         data-aos-duration="2000"  class="w-150 flex items-center justify-center my-5">
-          <button class="btn btn-primary hover:bg-red-700">READ MORE</button>
+          <button class="btn btn-primary hover:bg-red-700">
+            <a href="./ReadMore.html">More....</a>
+
+          </button>
           </div>
         
 
@@ -339,6 +342,10 @@
           </div>
         </div>
         </footer>
+        <div>
+          <hr>
+          <p class="py-5 text-sm text-center">©  Copyright 2024 audhorabithe - All Right Reserved</p>
+        </div>
        
     </main>
 
