--- a/About.html
+++ b/About.html
@@ -20,13 +20,13 @@
             </div>
               <nav class="flex  mx-auto p-3">
                   <ul class=" hidden md:flex item-center  justify-center gap-5 font-medium uppercase">
-                      <li><a href="#" >Home </a>
+                      <li><a href="./index.html" >Home </a>
                       <hr class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden "></li>
-                      <li><a href="#">All Doctor</a>
+                      <li><a href="./All Doctor.html">All Doctor</a>
                       <hr class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden  "></li>
-                      <li><a href="#">About</a>
+                      <li><a href="./About.html">About</a>
                         <hr  class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none "></li>
-                      <li><a href="#" >Contract</a>
+                      <li><a href="./contract.html" >Contact</a>
                         <hr  class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden"></li>
                   </ul>
                   </nav>
