--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
                       <hr class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden hover:border"></li>
                       <li><a href="./About.html">About</a>
                         <hr  class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden"></li>
-                      <li><a href="./contract.html" >Contract</a>
+                      <li><a href="./contract.html" >Contact</a>
                         <hr  class="w-3/4 mx-auto bg-primary h-0.5 border-none outline-none hidden"></li>
                   </ul>
                   </nav>
-                  <button class="ml-5 px-4 py-2 bg-green-300 text-gray-800 rounded hover:bg-yellow-300">Searceh</button>        
+                  <button class="ml-5 px-4 py-2 bg-green-300 text-gray-800 rounded hover:bg-yellow-300 md:block hidden">Searceh</button> 
+
               
           </header>
         </section>
@@ -58,8 +59,8 @@
 
                   </a>  
                 </div>
-                  <div class="md:w-1/2 ">
-                    <img class="  h-auto rounded-lg  " src="./image/bithe.pnj.png" alt="">
+                  <div class="md:w-1/2  ">
+                    <img class=" mb-0 h-auto rounded-lg  " src="./image/cv-removebg-preview.png" alt="">
                   </div>
 
                 </div>
